yamls/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ragamuffin # prefix for  pod names
  labels:
    app: ragamuffin
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  ragamuffin
  template:
    metadata:
      labels:
        app: ragamuffin
    spec:  

      volumes:
      - name: ragamuffin-subdomain-vol
        persistentVolumeClaim:
          claimName: ragamuffin-subdomain-pvc
      - name: ragamuffin-deploystatic-vol
        persistentVolumeClaim:
          claimName: ragamuffin-deploystatic-pvc

      containers:
        - name: ragamuffin
          image: 'opentaproject/ragamuffin:v20260526'
          volumeMounts:
              - mountPath: "/subdomain-data"
                name: ragamuffin-subdomain-vol
              #- mountPath: "/srv/ragamuffin/blog/deploystatic"
              #  name: ragamuffin-deploystatic-vol
    
          imagePullPolicy: Always
          command: ["/bin/bash","-c"]
          args: 
            - cd backend;
              /usr/bin/supervisord -c /srv/django_ragamuffin/backend/supervisord.conf 
              #npx @tailwindcss/cli -i static/css/input.css -o static/css/output.css;
              #python manage.py collectstatic --no-input;
              #python manage.py runserver

        - name: nginx
          image: 'opentaproject/ragamuffin-nginx:v20260526'
          ports: 
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/subdomain-data"
              name: ragamuffin-subdomain-vol
            - mountPath: "/deploystatic"
              name: ragamuffin-deploystatic-vol





    
---

kind: Service
apiVersion: v1
metadata:
  name: ragamuffin-service
spec:
  selector:
    app: ragamuffin
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8080
      name: http
