yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${SUBDOMAIN}
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "700m"
spec:
  tls:
    - hosts:
      - "${SUBDOMAIN}.openta.dev"   #EDIR
      secretName: openta-tls-secret
  ingressClassName: public
  rules:
    - host: "${SUBDOMAIN}.openta.dev" #EDIT THIS
      http:
        paths:
          - pathType: "ImplementationSpecific"
            path: /
            backend:
              service:
                name: "${SUBDOMAIN}-service"
                port:
                  number: 8000
